--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>Open Source – Khan Challagulla</title>
-    <link rel="icon" href="https://khan.github.io/favicon.ico">
-    <link rel="stylesheet" href="./Open Source – Khan Academy_files/webfont.css">
-    <link rel="stylesheet" href="./Open Source – Khan Academy_files/style.css">
 </head>
 <body>
     Hello khan
-</body></html>
+</body>
+</html>
